--- a/content-src/main.scss
+++ b/content-src/main.scss
@@ -7,6 +7,18 @@ body,
   height: 100%;
 }
 
+// For screen readers
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
+}
+
 body {
   background: $bg-color;
   color: $dark-grey;
@@ -30,7 +42,7 @@ a {
 }
 
 .inner-border {
-  border: 1px solid $faint-black;
+  border: 1px solid $faintest-black;
   border-radius: $border-radius;
   position: absolute;
   top: 0;
